--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "proxy": "http://localhost:8080",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --open --host 0.0.0.0",
+    "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -19,13 +19,9 @@
   "author": "Matt",
   "license": "MIT",
   "dependencies": {
-    "@blueprintjs/select": "^3.13.7",
-    "@types/react-color": "^3.0.4",
-    "axios": "^0.19.2",
     "file-loader": "^6.1.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
-    "peer": "^0.6.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
