--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "MIT",
   "dependencies": {
     "file-loader": "^6.1.0",
+    "jodit": "^3.7.2",
+    "jodit-react-ts": "^0.9.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
@@ -35,7 +37,6 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.6.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -46,7 +47,8 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "ts-jest": "^24.3.0",
-    "typescript": "^3.9.6",
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.3.5",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
