--- a/package.json
+++ b/package.json
@@ -19,22 +19,30 @@
   "author": "Matt",
   "license": "MIT",
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^3.0.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "file-loader": "^6.1.0",
+    "html-to-draftjs": "^1.5.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-split-pane": "^0.1.92",
     "save-dev": "0.0.1-security",
     "tslint": "^6.1.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^24.0.25",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-draft-wysiwyg": "^1.13.3",
     "css-loader": "^3.6.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
